# kernel-build-bazel_mgk_rules

./: BUILD.bazel  mgk.bzl  mgk_ko.bzl
kleaf/: bazel.WORKSPACE  key_value_repo.bzl
