package(
    default_visibility = [
        "//visibility:public",
    ],
)


load(
    "@bazel_skylib//rules:common_settings.bzl",
    "bool_flag",
    "string_flag",
)


bool_flag(name = "entry_level_config", build_setting_default = False)
bool_flag(name = "fpga_config"       , build_setting_default = False)
bool_flag(name = "kasan_config"      , build_setting_default = False)
bool_flag(name = "khwasan_config"    , build_setting_default = False)
bool_flag(name = "vulscan_config"    , build_setting_default = False)
config_setting(name = "entry_level_set", flag_values = {":entry_level_config": "true"})
config_setting(name = "fpga_set"       , flag_values = {":fpga_config"       : "true"})
config_setting(name = "kasan_set"      , flag_values = {":kasan_config"      : "true"})
config_setting(name = "khwasan_set"    , flag_values = {":khwasan_config"    : "true"})
config_setting(name = "vulscan_set"    , flag_values = {":vulscan_config"    : "true"})

string_flag(name = "kernel_version" , build_setting_default = "6.1")
config_setting(name = "kernel_version_6.1"     , flag_values = {":kernel_version": "6.1"})
config_setting(name = "kernel_version_mainline", flag_values = {":kernel_version": "mainline"})

bool_flag(name = "internal_config", build_setting_default = False)
config_setting(name = "internal_set", flag_values = {":internal_config": "true"})
